test: getCategory 메소드 스트림 개선